--- a/css/style.css
+++ b/css/style.css
@@ -13,10 +13,11 @@ main{
 }
 .nav{
     background-color: blue;
-    width: 1440px;
+    width: 100%;
     height: 94px;
     left: 0px;
     top: 0px;
+    
 }
 section{
     background-color: white;
